تم حل الكلاسورك

--- a/Development/jsDeveloper.html
+++ b/Development/jsDeveloper.html
@@ -1,4 +1,17 @@
 <!-- html:5 باستخدام HTMLقم بتهيئة ملفك ال -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Document</title>
+     <script src="C:\Users\z-akb_000\Documents\GitHub\web-cw-5.2\Development\js\scripts.js">
+     </script>
+</head>
+<body>
+     
+</body>
+</html>
 
 <!-- HTMLبصفحتك ال scripts.js قم بربط ملف -->
 
